# posazure

./: Taskfile.yaml  conda_setup.sh  condarc  pool.json  pyproject.toml  start_task.sh
templates/: pool.json.j2
